@@ -205,7 +205,7 @@ LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_from_byte_stream(
 /* Converts a 64-bit value into a filetime
  * Returns 1 if successful or -1 on error
  */
-LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_from_uint64(
+LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_from_64bit(
                          libfdatetime_filetime_t *filetime,
                          uint64_t value_64bit,
                          libfdatetime_error_t **error );
