@@ -86,7 +86,7 @@ enum LIBFDATETIME_ARGUMENT_ERROR
 };
 
 /* TODO deprecated remove after a while */
-#define LIBFDATETIME_ARGUMENT_ERROR_VALUE_OUT_OF_RANGE	LIBFDATETIME_ARGUMENT_ERROR_VALUE_OUT_OF_BOUNDS
+#define LIBFDATETIME_ARGUMENT_ERROR_VALUE_OUT_OF_RANGE		LIBFDATETIME_ARGUMENT_ERROR_VALUE_OUT_OF_BOUNDS
 
 /* The conversion error codes
  * to signify errors regarding conversions
@@ -121,7 +121,7 @@ enum LIBFDATETIME_COMPRESSION_ERROR
 };
 
 /* TODO deprecated remove after a while */
-#define LIBERROR_COMPRESSION_ERROR_UNCOMPRESS_FAILED	LIBERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED
+#define LIBERROR_COMPRESSION_ERROR_UNCOMPRESS_FAILED		LIBERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED
 
 /* The input/output error codes
  * to signify errors regarding input/output
@@ -276,11 +276,15 @@ enum LIBFDATETIME_RUNTIME_ERROR
 
 	/* The value is unsupported
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_UNSUPPORTED_VALUE		= 14
+	LIBFDATETIME_RUNTIME_ERROR_UNSUPPORTED_VALUE		= 14,
+
+	/* An abort was requested
+	 */
+	LIBFDATETIME_RUNTIME_ERROR_ABORT_REQUESTED		= 15
 };
 
 /* TODO deprecated remove after a while */
-#define LIBFDATETIME_RUNTIME_ERROR_VALUE_OUT_OF_RANGE	LIBFDATETIME_RUNTIME_ERROR_VALUE_OUT_OF_BOUNDS
+#define LIBFDATETIME_RUNTIME_ERROR_VALUE_OUT_OF_RANGE		LIBFDATETIME_RUNTIME_ERROR_VALUE_OUT_OF_BOUNDS
 
 /* The output error codes
  */
