@@ -70,7 +70,7 @@ LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_from_byte_stream(
                          uint8_t byte_order,
                          liberror_error_t **error );
 
-LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_from_uint64(
+LIBFDATETIME_EXTERN int libfdatetime_filetime_copy_from_64bit(
                          libfdatetime_filetime_t *filetime,
                          uint64_t value_64bit,
                          liberror_error_t **error );
