@@ -53,7 +53,7 @@ Filetime functions
 .Ft int
 .Fn libfdatetime_filetime_copy_from_byte_stream "libfdatetime_filetime_t *filetime, uint8_t *byte_stream, size_t byte_stream_size, uint8_t byte_order, libfdatetime_error_t **error"
 .Ft int
-.Fn libfdatetime_filetime_copy_from_uint64 "libfdatetime_filetime_t *filetime, uint64_t value_64bit, libfdatetime_error_t **error"
+.Fn libfdatetime_filetime_copy_from_64bit "libfdatetime_filetime_t *filetime, uint64_t value_64bit, libfdatetime_error_t **error"
 .Ft int
 .Fn libfdatetime_filetime_get_string_size "libfdatetime_filetime_t *filetime, size_t *string_size, uint8_t string_format_flags, int date_time_format, libfdatetime_error_t **error"
 .Ft int
